# agent-control

./: .gitignore  AGENTS.md  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  SETUP.md  WORKSPACE_MIGRATION.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docker-publish.yml  pr-title.yaml  publish.yaml  release-sdk-ts.yml  release.yaml
docs/: OVERVIEW.md  REFERENCE.md  observability.md
docs/evaluators/: sql.md
docs/plugins/: json.md  sql.md
engine/: Makefile  README.md  pyproject.toml
engine/src/agent_control_engine/: __init__.py  core.py  discovery.py  evaluators.py
engine/src/agent_protect_engine/: core.py  evaluators.py  selectors.py
engine/tests/: conftest.py  test_core.py  test_discovery.py  test_evaluators.py  test_plugin_evaluators.py  test_selectors.py
evaluators/builtin/: pyproject.toml
evaluators/tests/: test_sql.py
examples/: README.md  agent_with_tools_example.py  luna2_demo.py  luna2_plugin_example.py
examples/agent_control_demo/: README.md  agent_luna_demo.py  demo_agent.py  setup_controls.py  update_controls.py
examples/cisco_ai_defense/: Makefile  README.md  chat_guarded_all.py  chat_guarded_post.py  chat_inspect_demo.py  pyproject.toml  register_agent.py  setup_ai_defense_controls.py
examples/crewai/: .env.example  README.md  content_agent_protection.py  pyproject.toml  setup_content_controls.py
examples/customer_support_agent/: README.md  demo.sh  run_demo.py  setup_demo_controls.py  support_agent.py
examples/deepeval/: README.md  __init__.py  config.py  evaluator.py  pyproject.toml  qa_agent.py  (+2 more)
models/: pyproject.toml
plugins/: README.md  pyproject.toml
plugins/src/agent_control_plugins/: __init__.py  base.py
plugins/src/agent_control_plugins/builtin/: __init__.py  json.py  sql.py
plugins/src/agent_control_plugins/luna2/: __init__.py  config.py  plugin.py
plugins/tests/: __init__.py  test_base.py  test_json.py  test_sql.py
scripts/: build.py
sdks/: README.md  pyproject.toml
sdks/python/: Makefile  README.md  pyproject.toml
sdks/python/src/agent_control/: __init__.py  _control_registry.py  _schema_derivation.py  agents.py  control_decorators.py  controls.py  evaluation.py  observability.py  policies.py  tool_decorator.py  yaml_validator.py
sdks/python/src/agent_control/integrations/: _core.py
sdks/python/src/agent_control/integrations/google_adk/: __init__.py  _extractors.py  plugin.py
sdks/python/src/agent_control/integrations/strands/: __init__.py  plugin.py  steering.py
sdks/python/src/agent_control/plugins/: __init__.py  base.py  registry.py
sdks/python/src/agent_protect/: __init__.py
sdks/python/tests/: README.md  conftest.py  test_agent_id_validation.py  test_agents_api.py  test_control_decorators.py  test_control_registry.py  test_google_adk_extractors.py  test_google_adk_init.py  test_google_adk_plugin.py  test_init_step_merge.py  test_init_validation.py  test_integration_agents.py  test_integrations_core.py  test_luna2_plugin.py  test_packaging.py  test_plugins.py  test_policy_refresh_loop.py  test_schema_derivation.py  test_shutdown.py  test_strands_init.py  test_strands_plugin.py  test_yaml_validator.py
sdks/typescript/: .eslintrc.cjs  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASING.md  gen.yaml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
sdks/typescript/.speakeasy/: workflow.yaml
sdks/typescript/overlays/: method-names.overlay.yaml
sdks/typescript/scripts/: generate-method-names-overlay.py  generate-sdk.sh  install-speakeasy.sh
sdks/typescript/src/: client.ts  control.ts  errors.ts  index.ts  types.ts
sdks/typescript/tests/: client-api.test.ts  client.test.ts  control.test.ts  generated-smoke.test.ts  test_generate_method_names_overlay.py
server/: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  openapi.py  pyproject.toml
ui/: .gitignore  AGENTS.md  README.md  empty-css-module.js  eslint.config.mjs  next.config.ts  openapi.json  package.json  pnpm-lock.yaml
(+169 files in other folders)
