# Agent Protect Root Configuration
# 
# This project has been split into separate workspaces:
# - sdks/ - SDK implementations workspace
# - server/ - Server workspace
# - models/ - Shared models package (referenced by both workspaces)
#
# To work with each component, navigate to its directory and use uv commands there.

[project]
name = "agent-protect"
version = "0.1.0"
description = "Agent protection system with isolated server and multi-language SDK support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

