[project]
name = "agent-control-crewai-example"
version = "0.1.0"
description = "CrewAI content moderation example with Agent Control"
requires-python = ">=3.12"
dependencies = [
    "agent-control-engine",
    "agent-control-models",
    "agent-control-plugins",
    "agent-control-sdk",
    "crewai>=0.80.0",
    "crewai-tools>=0.12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    ".env.example",
]

[tool.uv.sources]
agent-control-sdk = { path = "../../sdks/python", editable = true }
agent-control-models = { path = "../../models", editable = true }
agent-control-engine = { path = "../../engine", editable = true }
agent-control-plugins = { path = "../../plugins", editable = true }
